# IEF

./: README.md  mod.cpp
dayz_proxy/: Cargo.toml  Dockerfile  docker-compose.yaml
dayz_proxy/src/: main.rs
dayz_proxy/src/api/: metrics.rs  proxy.rs
dayz_proxy/src/data/: dao.rs
dayz_services/: Cargo.toml  Dockerfile
dayz_services/src/: main.rs
dayz_services/src/api/: metrics.rs  mod.rs  proxy.rs
dayz_services/src/api/discord/: mod.rs  player_roles.rs
dayz_services/src/data/: dao.rs  mod.rs
dayz_services/src/data/migrations/: m000_initial_tables.rs  m001_player_table.rs  mod.rs
docs/: blocked_actions.md  dayz-services.md  index.md  liquids.md
mod/: config.cpp
mod/data/images/: blocked_icon.edds  blocked_icon.paa  ief_logo.paa
mod/data/layouts/: ie_framework_blocked_icon.layout
mod/scripts/3_Game/IE/Framework/: arrayutils.c
mod/scripts/3_Game/IEF/: arrayutils.c  assert.c  logger.c  ring.c
mod/scripts/4_World/IEF/: liquidregistry.c
mod/scripts/4_World/IEF/actions/: actionbase.c
mod/scripts/5_Mission/IEF/: inspectmenunew.c  itemactionswidget.c  missionbase.c
modules/IEF/: config.cpp
modules/IEF/data/layouts/: ie_framework_blocked_icon.layout
modules/IEF/scripts/3_Game/IEF/: arrayutils.c  logger.c  metrics.c  ring.c  tuple.c
modules/IEF/scripts/4_World/IEF/: liquidregistry.c  playerbase.c
modules/IEF/scripts/5_Mission/IEF/: actiontargetscursor.c  itemactionswidget.c  (+1 more)
workspace/: build.bat  buildincludes  dayz.gproj  dismount.bat  mount.bat  mount_no_code.bat  run_client.bat  run_server.bat  serverDZ.cfg  vars.bat  workbench.bat
(+2 files in other folders)
