[package]
name = "dayz_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
async-trait = "0.1.79"
chrono = { version = "0.4.37", features = [ "now" ] }
clap = { version = "4.5.2", features = ["derive", "env"] }
derive_more = "0.99.17"
env_logger = "0.11.3"
log = "0.4.21"
logger = "0.4.0"
reqwest = "0.11.26"
serde = {version ="1.0.197", features= ["derive"] }
serde_json = "1.0.114"
serenity = "0.12.1"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "chrono", "uuid" ] }
uuid = { version = "1.8.0", features = [ "v4", "serde" ] }

